--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WpF BGness : Home page</title>
+    <title>Mahal SHOP : Home page</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">WpF <span>BGness</span></a>
+        <a class="navbar-brand" href="index.html">Mahal <span>SHOP</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
@@ -89,7 +89,7 @@
           <li>
             <img src="img/slider/1.jpg" alt="img">
             <div class="slider_caption">
-              <h2><span>Welcome To</span> WpF Bgness</h2>
+              <h2><span>Welcome To</span> Mahal SHOP</h2>
               <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search</p>
               <a class="slider_btn" href="#">Read More</a>
             </div>
@@ -130,7 +130,7 @@
         <div class="service_area">
           <div class="service_title">
             <hr>
-            <h2>Wpf Bgness </h2>
+            <h2>Mahal SHOP </h2>
             <p>Trusted by Fortune 500 retailers and the world’s top brands.</p>
           </div>
           <ul class="service_nav wow flipInX">
@@ -254,10 +254,25 @@
               <ul class="team_nav">
                 <li>
                   <div class="team_img">
-                    <img src="img/leify.png" alt="team-img">
+                    <img src="img/medlya.png" alt="team-img">
                   </div>
                   <div class="team_content">
-                    <h4>Ben Davis</h4>
+                    <h4>Mohammmed LYAZIDI</h4>
+                    <p>Managing Director</p>
+                  </div>
+                  <div class="team_social">
+                    <a href="#"><span class="fa fa-facebook"></span></a>
+                    <a href="#"><span class="fa fa-twitter"></span></a>
+                    <a href="#"><span class="fa fa-linkedin"></span></a>
+                    <a href="#"><span class="fa fa-google-plus"></span></a>
+                  </div>
+                </li>
+                <li>
+                  <div class="team_img">
+                    <img src="img/hajjou.png" alt="team-img">
+                  </div>
+                  <div class="team_content">
+                    <h4 class="team_name">Abdelhakim HAJJOUBI</h4>
                     <p>Managing Director</p>
                   </div>
                   <div class="team_social">
@@ -272,7 +287,7 @@
                     <img src="img/leify.png" alt="team-img">
                   </div>
                   <div class="team_content">
-                    <h4 class="team_name">Dania Gerhardt</h4>
+                    <h4 class="team_name">Iliass ELAMRANI</h4>
                     <p>Managing Director</p>
                   </div>
                   <div class="team_social">
@@ -282,51 +297,8 @@
                     <a href="#"><span class="fa fa-google-plus"></span></a>
                   </div>
                 </li>
-                <li>
-                  <div class="team_img">
-                    <img src="img/leify.png" alt="team-img">
-                  </div>
-                  <div class="team_content">
-                    <h4 class="team_name">Dania Gerhardt</h4>
-                    <p>Managing Director</p>
-                  </div>
-                  <div class="team_social">
-                    <a href="#"><span class="fa fa-facebook"></span></a>
-                    <a href="#"><span class="fa fa-twitter"></span></a>
-                    <a href="#"><span class="fa fa-linkedin"></span></a>
-                    <a href="#"><span class="fa fa-google-plus"></span></a>
-                  </div>
-                </li>
-                <li>
-                  <div class="team_img">
-                    <img src="img/leify.png" alt="team-img">
-                  </div>
-                  <div class="team_content">
-                    <h4 class="team_name">Dania Gerhardt</h4>
-                    <p>Managing Director</p>
-                  </div>
-                  <div class="team_social">
-                    <a href="#"><span class="fa fa-facebook"></span></a>
-                    <a href="#"><span class="fa fa-twitter"></span></a>
-                    <a href="#"><span class="fa fa-linkedin"></span></a>
-                    <a href="#"><span class="fa fa-google-plus"></span></a>
-                  </div>
-                </li>
-                <li>
-                  <div class="team_img">
-                    <img src="img/leify.png" alt="team-img">
-                  </div>
-                  <div class="team_content">
-                    <h4 class="team_name">Dania Gerhardt</h4>
-                    <p>Managing Director</p>
-                  </div>
-                  <div class="team_social">
-                    <a href="#"><span class="fa fa-facebook"></span></a>
-                    <a href="#"><span class="fa fa-twitter"></span></a>
-                    <a href="#"><span class="fa fa-linkedin"></span></a>
-                    <a href="#"><span class="fa fa-google-plus"></span></a>
-                  </div>
-                </li>
+                
+                
               </ul>
             </div>
           </div>
@@ -604,7 +576,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="single_footer_top">
-                  <h2>Wpf Bgness</h2>
+                  <h2>Mahal SHOP</h2>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                 </div>
                 <div class="single_footer_top contact_mail">
@@ -645,7 +617,7 @@
               <p>All right reserved </p>
             </div>
             <div class="developer">
-              <p>Designed By <a href="http://wpfreeware.com/" rel="nofollow">Wpfreeware</a></p>
+              <p>Designed By <a href="http://wpfreeware.com/" rel="nofollow">MahalShop</a></p>
             </div>
           </div>
         </div>
