--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">WpF <span>BGness</span></a>
+		<a class="navbar-brand" href="index.html">Mahal <span>SHOP</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
@@ -83,14 +83,7 @@
     
   <!-- start Contact section -->
   <section id="contact">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-        <div class="contact_map">
-          <!-- Start Google map -->
-          <div id="map_canvas"></div>
-        </div>
-      </div>
-    </div>
+    
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
@@ -116,9 +109,9 @@
                   <img src="img/phone_icon.png" alt="img">
                   <p>Say hello! We want to hear about what you have to say. We are open to feedback and any questions you may have.</p>
                   <address>
-                    <p><a href="mailto:hello@yourdomain.com"> hello@yourdomain.com</a></p>
-                    <p>Australia   +61 420 509 040</p>
-                    <p>USA   +1 415 425 4149</p>
+                    <p><a href="mailto:contact@mahalshop.xyz">contact@mahalshop.xyz</a></p>
+                    <p>Phone   +61 420 509 040</p>
+                    <p>Whatsapp   +1 415 425 4149</p>
                   </address>
                 </div>
               </div>
@@ -162,7 +155,7 @@
                 </div>
                 <div class="single_footer_top contact_mail">
                   <h2>Contact us</h2>
-                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+1 888-522-0212</span> or <a href="#">SupportUS@yourdomain.com</a></p>
+                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+1 888-522-0212</span> or <a href="#">contact@mahalshop.xyz</a></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
@@ -266,9 +259,7 @@
   <script src="js/jquery.superslides.min.js" type="text/javascript" charset="utf-8"></script>
   <!-- slick slider js file -->
   <script src="js/slick.min.js"></script>
-  <!-- Google map -->
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script src="js/jquery.ui.map.js"></script>
+
 
 
   <!-- custom js file include -->
