--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
             <img src="img/slider/1.jpg" alt="img">
             <div class="slider_caption">
               <h2><span>Welcome To</span> Mahal SHOP</h2>
-              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search</p>
+              <p>
+			  MAHAL SHOP was established in the year 2016 , It is conceived with an idea to offer affordable and swift delivery service throughout United Kingdom. Its head office is based in London. We are the only company in United Kingdom, which has a reliable privileges, MAHALSHOP focuses on providing high-quality service, customer satisfaction and through professionalism & fast service strategy that strives to exceed customer’s expectations.
+
+Every customer that MAHALSHOP deals with is treated as a partner & not as a customer, it’s this approach that has led
+			  </p>
               <a class="slider_btn" href="#">Read More</a>
             </div>
           </li> 
